SERVER-66556 Block shutdown when releasing cursors to avoid race conditions